fix: change z-index htm

--- a/.sys/www/index.css
+++ b/.sys/www/index.css
@@ -69,6 +69,7 @@ h6 {
 
 #welcome .welcome__circle__div__animation {
 	position: absolute;
+	z-index: -99;
 	transform: translate(-50%, -50%);
 	left: 50%;
 	top: 50%;
